k8s/apps/diag/whoami/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      namespace: whoami
      labels:
        app: whoami
    spec:
      containers:
        - image: ghcr.io/traefik/whoami:v1.12@sha256:c4717a8d1f0134a7444e24f881160e033991f23027c6c5a9a3f8fd22e70d1d44
          name: whoami
          ports:
            - containerPort: 80
              name: http
          resources:
            limits:
              cpu: 1000m
              memory: 24Mi
            requests:
              cpu: 50m
              memory: 12Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 999
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 999
        runAsNonRoot: true
        runAsUser: 999
        seccompProfile:
          type: RuntimeDefault
