k8s/apps/diag/whoami/base/svc-gw.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-gw
spec:
  ports:
    - name: web
      port: 80
      targetPort: http
  selector:
    app: whoami
  type: ClusterIP
