k8s/apps/diag/whoami/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-ingress
spec:
  hostnames:
    - "whoami.example.com"
    - "whoami-ingress.example.com"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: gateway-api
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: whoami-gw
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
